# ShaderSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  ShaderSandbox.kdev4  demo.cc  demo.h  main.cc  make.sh  shader.cc  shader.h
.kdev4/: ShaderSandbox.kdev4
resources/: background.png-autosave.kra  background.png~  photo1.gif~  photo1.png~  window.png~
shaders/: genie.frag  genie.vert  normal.frag  sample.frag  sample.vert  scale.frag  scale.vert  sdf.frag  sdf.vert  shader.frag  shader.vert  suck.frag
shaders/bending/: back.frag  front.frag
shaders/blending/: normal.frag
shaders/peel/: adhered.frag  adhered.vert  fold.frag  fold.vert  unstuck.frag
